[package]
name = "rata-tetris"
version = "0.1.0"
edition = "2021"
description = "A Tetris-like game written in Rust featuring classic gameplay, scoring, and terminal UI."
homepage = "https://github.com/nw-wood/rata-tetris"
repository = "https://github.com/nw-wood/rata-tetris"
#documentation = "https://docs.rs/rata-tetris"
license = "MIT"
keywords = ["tetris", "game", "rust", "terminal", "UI"]
categories = ["game", "terminal", "rendering", "data-structures"]
readme = "README.md"

[dependencies]
crossterm = "0.28.1"
dirs = "5.0.1"
once_cell = "1.20.2"
rand = "0.8.5"
ratatui = "0.29.0"
#rodio = "0.20.1"
